--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter the city name" spellcheck="false" name="" id="">
-            <button><img src="images/searchimg.jpg" alt=""></button>
+            <button><img src="./images/searchimg.jpg" alt=""></button>
         </div>
         <div class="error">
             <p>Invalid city name</p>
         </div>
         <div class="weather">
-            <img src="images/rain.png" class="weather-icon">
+            <img src="./images/rain.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <img src="images/humidity.png" alt="">
+                    <img src="./images/humidity.png" alt="">
                     <div>
                     <p class="humidity">50%</p>
                     <p>Humidity</p>
                 </div>
                 </div>
                 <div class="col">
-                    <img src="images/wind.png" alt="">
+                    <img src="./images/wind.png" alt="">
                     <div>
                     <p class="wind">15 km/hr</p>
                     <p>Wind Speed</p>
